2007-07-01  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (logprintf): Avoid name clash.
	(initclientdata): Clear the correct pipes.
	(stdin_thread): Enhance comment.  Add a totalread variable, and
	logprint it.
	(stdout_thread): Add a totalread variable, and logprint it.
	(stderr_thread): Likewise.
	(connect_stderr): Remove unneeded extra closesocket.
	(usage): Print to stdout instead of stderr.

2007-07-01  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (stdin_thread): Revert previous commit - return 0 if the
	child is still running.
	(stdin_thread, stdout_thread, stderr_thread): Close reading and
	writing side of the pipes before returning.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (create_child): Add a few comments.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (stdin_thread): If the connection closed gracefully but
	the child is still running, return 1.  Remove unneeded log call.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* Makefile (LDFLAGS): Clear.
	(CFLAGS): Remove PipeLib reference.
	(PIPELIBDIR): New.
	(LIBS): New.
	(INCLUDES): Add -I$(PIPELIBDIR).
	(rshd_unstripped.exe): Link with $(LIBS).
	(download): Don't download tester.exe by default.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c: Include getopt.h.
	(logfile): New global.
	(logprintf): Use logfile if set.
	(BUFSIZE): New define.
	(stdin_thread): Use BUFSIZE.  Echo using logprintf.
	(stdout_thread): Likewise.
	(stderr_thread): Likewise.
	(handle_connection): Kill a few warnings.  Set stderrsockfd to -1
	after closing it.  Remove dead code.
	(progname): New global.
	(usage): New function.
	(main): Use getopt.  Add -l option.
	* Makefile (LDFLAGS): Adjust to new PipeLib path.
	(CFLAGS): Likewise.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>

	* rshd.c (localecho): New global.
	(stdin_thread, stdout_thread, stderr_thread): Exit thread with